--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: fluid
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repo: git@github.com/qq626928256/ZhuYe-Hexo-Blog.git
+  branch: release
