--- a/_config.yml
+++ b/_config.yml
@@ -102,5 +102,5 @@ theme: fluid
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: 'git'
-  repo: git@github.com/qq626928256/ZhuYe-Hexo-Blog.git
+  repo: https://github.com/qq626928256/ZhuYe-Hexo-Blog.git
   branch: release
