--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
-keywords:
-author: John Doe
+title: 烛夜
+subtitle: '自闭资源分享'
+description: '自闭资源分享'
+keywords: '自闭症'
+author: Demon
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://zhuye.space
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -67,6 +67,7 @@ index_generator:
 # Category & Tag
 default_category: uncategorized
 category_map:
+    '自闭症资源': asdRes
 tag_map:
 
 # Metadata elements
