先提交上，然后找问题

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1,24 +1,519 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
-
-# Site
+# ----------------------网站资料----------------------
+# 网站标题
 title: 烛夜
-subtitle: '自闭资源分享'
-description: '自闭资源分享'
-keywords: '自闭症'
-author: Demon
-language: zh-CN
-timezone: 'Asia/Shanghai'
+# 网站副标题
+subtitle: 
+  enable: true
+  # Typewriter Effect (打字效果)
+  effect: true
+  # Customize typed.js
+  # https://github.com/mattboldt/typed.js/#customization
+  typed_option:
+  # source 调用第三方服务
+  # false 关闭调用
+  # 1  调用一言网的一句话（简体） https://hitokoto.cn/
+  # 2  调用一句网（简体） http://yijuzhan.com/
+  # 3  调用今日诗词（简体） https://www.jinrishici.com/
+  # subtitle 会先显示 source , 再显示 sub 的内容
+  source: false
+  # 如果关闭打字效果，subtitle 只会显示 sub 的第一行文字
+  sub:
+    - 自闭资源分享
 
+
+# 网站描述
+description: '自闭资源分享'
+# 网站的关键词。 支持多个关键词。
+keywords: '自闭症'
+# 您的名字
+author: Demon
+# 网站使用的语言
+language: zh-CN
+# 网站时区
+timezone: 'Asia/Shanghai'
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://zhuye.space
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
+
+
+# ----------------------导航设置----------------------
+nav:
+  # 网站的 logo，支持图片，直接填入图片链接
+  logo: https://cdn.jsdelivr.net/gh/JetMartin1019/picBed/Blog_ZhuYe/202503041643540.png
+  # 是否显示网站标题，填写 true 或者 false
+  display_title: true
+  # 是否固定状态栏，填写 true 或者 false
+  fixed: true
+
+menu:
+  首页: / || fas fa-home
+  自闭症资源: /tags/自闭症资源/ ||fas fa-list
+  书籍分享: / || fas fa-music
+  自闭症影视: / || fas fa-video
+  关于: /about/ || fas fa-heart
+
+
+# ----------------------代码块----------------------
+code_blocks:
+  # 代码高亮主题，可选 darker / pale night / light / ocean / false
+  theme: darker
+  # 是否使用 Mac 风格
+  macStyle: false
+  # 代码块高度限制（单位: px）, 可填写 数字 或者 false
+  height_limit: false
+  # 是否自动换行
+  word_wrap: false
+  # 是否显示复制按钮
+  copy: true
+  # 是否显示语言标签
+  language: true
+  # true: 收缩代码块 / false: 展开代码块 / none: 展开代码块并隐藏按钮
+  shrink: false
+  # 是否全屏显示代码块
+  fullpage: false
+
+
+# ----------------------社交图标----------------------
+social:
+  fab fa-github: https://github.com/qq626928256 || Github || "#hdhfbb"
+  fas fa-envelope: mailto:qq626928256@gmail.com || Email || "#000000"
+
+
+# ----------------------图片设置----------------------
+# 头像
+avatar:
+  img: /img/avatar.png
+  effect: true # 头像会一直转圈
+  
+# 顶部图
+top_img: false
+# 禁用所有横幅图片
+disable_top_img: false
+# 如果页面未设置横幅，则显示默认的横幅图片
+default_top_img:
+# 主页的横幅图片
+index_img: true
+# 归档页的横幅图片
+archive_img:
+# tag 子页面 的 默认 top_img
+# 注意: 是标签页（单个标签），不是标签页面（所有标签）
+tag_img:
+# tag 子页面的 top_img，可配置每个 tag 的 top_img
+# 格式:
+#  - 标签名: 图片链接
+tag_per_img:
+  # aplayer: https://xxxxxx.png
+  # android: ddddddd.png
+# 注意: 是分类页（单个分类），不是分类页面（所有分类）
+category_img:
+# 分类页的横幅图片，可以为每个分类设置横幅图片
+# 格式:
+#  - 分类名: 图片链接
+category_per_img:
+  # 随想: hdhdh.png
+  # 推荐: ddjdjdjd.png
+# 页脚的背景图片
+footer_img: false
+# 网站背景
+# 可以设置为颜色或图片
+# 图片格式: url(http://xxxxxx.com/xxx.jpg)
+background:
+# 封面设置
+cover:
+  # 主页是否显示文章封面图
+  index_enable: true
+  # 侧栏是否显示文章封面图
+  aside_enable: true
+  # 归档页面是否显示文章封面图
+  archives_enable: true
+  # 主页封面的位置
+  # 选择: left/right/both
+  position: both
+  # 默认的 cover, 可配置图片链接/顔色/渐变色等
+  # 当配置多张图片时,会随机选择一张作为 cover.此时写法应为
+  default_cover:
+    # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
+    # - https://jsd.012700.xyz/gh/jerryc127/CDN@latest/cover/default_bg2.png
+
+# 替换损坏的图片
+error_img:
+  # 友链页面的错误图片
+  flink: /img/friend_404.gif
+  # 文章页面的错误图片
+  post_page: /img/404.jpg
+# 简单的 404 页面
+error_404:
+  # 是否启用 404 页面
+  enable: true
+  # 404 页面的副标题
+  subtitle: 'Page Not Found'
+  # 404 页面的卡片背景图片
+  background: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
+
+
+# ----------------------页面 meta 显示----------------------
+post_meta:
+  # 这个选项是用来显示文章的相关信息的
+  page:
+    # 显示文章的时间，可选 created / updated / both
+    date_type: created
+    # 配置时间显示明确时间还是相对时间，可选 date / relative
+    date_format: date
+    # 是否显示文章的分类
+    categories: true
+    # 是否显示文章的标签
+    tags: false
+    # 是否显示文字标签
+    label: true
+  post:
+    # 文章页 meta 显示的位置，可选 left / center
+    position: left
+    # 显示文章的时间，可选 created / updated / both
+    date_type: both
+    # 配置时间显示明确时间还是相对时间，可选 date / relative
+    date_format: date
+    # 是否显示文章的分类
+    categories: true
+    # 是否显示文章的标签
+    tags: true
+    # 是否显示文字标签
+    label: true
+
+
+# ----------------------首页----------------------
+# 主页设置
+# 默认top_img全屏，site_info在中间
+# 使用默认, 都无需填写（建议默认）
+index_site_info_top: # 主页标题距离顶部距离  例如 300px/300em/300rem/10%
+index_top_img_height: #主页top_img高度 例如 300px/300em/300rem  不能使用百分比
+# 主题文章卡片支持 7 种佈局
+index_layout: 3
+
+
+
+# ----------------------文章页----------------------
+# TOC目录
+toc:
+  # 文章页是否显示 TOC
+  post: true
+  # 普通页面是否显示 TOC
+  page: false
+  # 是否显示章节数
+  number: true
+  # 是否展开 TOC
+  expand: false
+  # 简洁模式（侧边栏只显示 TOC, 只对文章页有效 ）
+  style_simple: false
+  # 是否显示滚动进度百分比
+  scroll_percent: true
+# 文章版权
+post_copyright:
+  # 是否启用版权声明
+  enable: true
+  # 是否进行文章 URL 解码
+  decode: false
+  # 作者链接
+  author_href:
+  # 许可证类型
+  license: CC BY-NC-SA 4.0
+  # 许可证链接
+  license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
+# 文章打赏/贊助
+reward:
+  enable: true
+  text:
+  QR_code:
+    - img: /img/wechat.jpg
+      link:
+      text: 微信
+    - img: /img/alipay.jpg
+      link:
+      text: 支付宝
+# 博客年份
+footer:
+  owner:
+    enable: true
+    since: 2018
+# 页脚自定义文本
+custom_text: Hi, welcome to my <a href="https://butterfly.js.org/">blog</a>!
+
+
+
+# ----------------------Aside----------------------
+aside:
+  # 是否启用侧边栏
+  enable: true
+  # 是否默认隐藏侧边栏
+  hide: false
+  # 是否显示隐藏侧边栏的按钮
+  button: true
+  # 是否在移动端显示侧边栏
+  mobile: true
+  # 侧边栏位置，left / right
+  position: right
+  display:
+    # archive 页面是否显示 aside
+    archive: true
+    # tag 页面是否显示 aside
+    tag: true
+    # category 页面是否显示 aside
+    category: true
+  card_author:
+    # 是否显示作者卡片
+    enable: true
+    # 作者描述信息
+    description:
+    button:
+      # 是否显示按钮
+      enable: true
+      # 按钮图标，可在这里找到图标名称：https://fontawesome.com/icons?d=gallery&m=free
+      icon: fab fa-github
+      # 按钮文字
+      text: Follow Me
+      # 按钮链接
+      link: https://github.com/xxxxxx
+  card_announcement:
+    # 是否显示公告卡片
+    enable: true
+    # 公告内容 （可使用 html 标签）
+    content: This is my Blog
+  card_recent_post:
+    # 是否显示最新文章卡片
+    enable: true
+    # 显示文章数目，0 为全部
+    limit: 5
+    # 排序方式，date / updated
+    sort: date
+    sort_order:
+  card_newest_comments:
+    # 是否显示最新评论卡片
+    enable: false
+    sort_order:
+    # 显示评论数目，0 为全部
+    limit: 6
+    # 保存时间，单位分钟，保存到本地存储，避免每次刷新都重新请求数据
+    storage: 10
+    # 是否显示头像
+    avatar: true
+  card_categories:
+    # 是否显示分类卡片
+    enable: true
+    # 显示分类数目，0 为全部
+    limit: 8
+    # 是否展开分类，none / true / false
+    expand: none
+    sort_order:
+  card_tags:
+    # 是否显示标签卡片
+    enable: true
+    # 显示标签数目，0 为全部
+    limit: 40
+    # 是否显示标签顔色
+    color: false
+    # 标签排序方式，random / name / length
+    orderby: random
+    # 排序方式，1 为升序，-1 为降序
+    order: 1
+    sort_order:
+  card_archives:
+    # 是否显示归档卡片
+    enable: true
+    # 归档类型，monthly / yearly
+    type: monthly
+    # 归档显示格式，例如：YYYY 年 MM 月
+    format: MMMM YYYY
+    # 排序方式，1 为升序，-1 为降序
+    order: -1
+    # 显示归档数目，0 为全部
+    limit: 8
+    sort_order:
+  card_post_series:
+    # 是否显示文章系列卡片
+    enable: true
+    # 是否显示系列名称
+    series_title: false
+    # 排序方式，title / date
+    orderBy: 'date'
+    # 排序方式，1 为升序，-1 为降序
+    order: -1
+  card_webinfo:
+    # 是否显示网站信息卡片
+    enable: true
+    # 是否显示文章数量
+    post_count: true
+    # 是否显示最后更新日期
+    last_push_date: true
+    sort_order:
+    # 显示网站运行时间,不需要开启，留空白就行（开启格式一定要是 Month/Day/Year Time 或者 Year/Month/Day Time
+    runtime_date:
+
+
+
+# ----------------------右下角按钮----------------------
+# 当开启 chat 聊天服务后，聊天服务的按钮可能会遮挡到右下角的按钮，可以设置按钮的位置。
+# 非必要不建议设置，默认就行
+rightside_bottom:
+
+# 夜间模式
+darkmode:
+  enable: true
+  # 是否在右下角显示日夜模式切换按钮
+  button: true
+  # 自动切换的模式
+  # autoChangeMode: 1 跟随系统而变化，不支持的浏览器/系统将按照时间 start 到 end 之间切换为 light mode
+  # autoChangeMode: 2 只按照时间 start 到 end 之间切换为 light mode ,其余时间为 dark mode
+  # autoChangeMode: false 取消自动切换
+  autoChangeMode: false
+  # light mode 的开始时间
+  start: # 8
+  # light mode 的结束时间
+  end: # 22
+# 滚动状态百分比
+rightside_scroll_percent: true
+
+# 可对右下角按钮进行排序
+# Don't modify the following settings unless you know how they work (非必要请不要修改 )
+# Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
+# Don't repeat 不要重复
+rightside_item_order:
+  enable: false
+  hide: # readmode,translate,darkmode,hideAside
+  show: # toc,chat,comment
+
+
+
+
+# ----------------------右下角按钮----------------------
+
+# 页面锚点
+anchor:
+  # 当滚动时，URL 将根据标题 id 更新。默认为 false。
+  auto_update: false
+  # 点击标题滚动并更新锚点。默认为 false。
+  click_to_scroll: false
+
+# 图片描述
+photofigcaption: true
+
+# 可配置网站是否可以复制、复制的内容是否添加版权信息
+copy:
+  # 是否开启网站复制权限
+  enable: true
+  # 复制的内容后面加上版权信息
+  copyright:
+    # 是否开启复制版权信息添加
+    enable: false
+    # 字数限制，当复制文字大于这个字数限制时，将在复制的内容后面加上版权信息
+    limit_count: 150
+    
+# 字数统计
+# Need to install the hexo-wordcount plugin
+wordcount:
+  enable: false
+  # 在文章页面显示字数
+  post_wordcount: true
+  # 在文章页面显示閲读时间
+  min2read: true
+  # 在侧边栏显示网站总字数
+  total_wordcount: true
+
+# 访问人数 busuanzi (UV 和 PV)
+busuanzi:
+  site_uv: true
+  site_pv: true
+  page_pv: true
+
+
+
+# ----------------------搜索----------------------
+search:
+  # Choose: algolia_search / local_search / docsearch
+  # leave it empty if you don't need search
+  use: local_search
+  placeholder:
+
+
+# ----------------------分享----------------------
+share:
+  # 选择分享方式，可选sharejs或addtoany，如果不需要分享请留空
+  use: sharejs
+
+
+
+# ----------------------广告----------------------
+google_adsense:
+  enable: true
+  auto_ads: true
+  js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
+  client: # 填入个人识别码
+  enable_page_level_ads: true
+
+
+# ----------------------美化/特效----------------------
+# 自定义主题色
+theme_color:
+  enable: true
+  # 主题色
+  main: '#49B1F5'
+  # 分页器颜色
+  paginator: '#00c4b6'
+  # 按钮 hover 颜色
+  button_hover: '#FF7242'
+  # 文字选中颜色
+  text_selection: '#00c4b6'
+  # 链接颜色
+  link_color: '#99a9bf'
+  # 文章元数据颜色
+  meta_color: '#858585'
+  # 分割线颜色
+  hr_color: '#A4D8FA'
+  # 代码前景色
+  code_foreground: '#F47466'
+  # 代码背景色
+  code_background: 'rgba(27, 31, 35, .05)'
+  # 目录颜色
+  toc_color: '#00c4b6'
+  # 引用边框颜色
+  blockquote_padding_color: '#49b1f5'
+  # 引用背景色
+  blockquote_background_color: '#49b1f5'
+  # 滚动条颜色
+  scrollbar_color: '#49b1f5'
+  # light mode 主题色
+  meta_theme_color_light: 'ffffff'
+  # dark mode 主题色
+  meta_theme_color_dark: '#0d0d0d'
+
+# 黑色遮罩 为了避免图片过于鲜艷而导致文字无法閲读，默认为顶部图和页脚添加黑色遮罩
+mask:
+  header: true
+  footer: true
+
+# 页面加载动画 preloader
+preloader:
+  enable: false
+  # source
+  # 1. fullpage-loading
+  # 2. pace (progress bar)
+  source: 1
+  # pace theme (see https://codebyzach.github.io/pace/)
+  pace_css_url:
+
+
+
+# 点击出现爱心
+click_heart:
+  enable: true
+  mobile: false
+
+
+
+
 
 # Directory
 source_dir: source
