--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -79,7 +79,7 @@ social:
 # --------------------------------------
 
 # 网站的 favicon 图标
-favicon: https://raw.gitcode.com/qq626928256/PicBed/raw/main/OceanIcon.jpg
+favicon: https://raw.gitcode.com/qq626928256/PicBed/raw/main/SiteLogo_512x512.png
 
 # 头像设置
 avatar:
